2009-07-10  Kwang Yul Seo  <skyul@company100.net>

Reviewed by Darin Adler.

        ParserArenaDeletable should override delete
        https://bugs.webkit.org/show_bug.cgi?id=26790

        ParserArenaDeletable overrides new, but it does not override delete.
        ParserArenaDeletable must be freed by fastFree
        because it is allocated by fastMalloc.

        * parser/NodeConstructors.h:
        (JSC::ParserArenaDeletable::operator delete):
        * parser/Nodes.h:



Canonical link: https://commits.webkit.org/37383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45730 268f45cc-cd09-0410-ab3c-d52691b4dbfc